[gd_scene load_steps=12 format=2]

[ext_resource path="res://Font/Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/Default.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprite-action-black.png" type="Texture" id=3]
[ext_resource path="res://Font/SmallBold.tres" type="DynamicFont" id=4]
[ext_resource path="res://Font/Small.tres" type="DynamicFont" id=5]
[ext_resource path="res://Interface/Ships/Groups/ShipStatus_GroupScript.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0.0784314, 0.0862745, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.25098, 0.709804, 0.678431, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 225, 257, 30, 30 )

[node name="ShipStatus_Group" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1080.0
margin_bottom = -570.0
rect_min_size = Vector2( 200, 30 )
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 30 )
custom_constants/separation = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
rect_pivot_offset = Vector2( -20, 0 )
size_flags_horizontal = 8
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon = SubResource( 5 )
flat = true
align = 2
icon_align = 2
expand_icon = true

[node name="ShipName" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_top = 2.0
margin_right = 174.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 15 )
size_flags_vertical = 4
custom_fonts/bold_font = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "GEMINI-1"
text = "GEMINI-1"
scroll_active = false

[node name="ShipType" type="RichTextLabel" parent="VBoxContainer"]
margin_left = 25.0
margin_top = 21.0
margin_right = 200.0
margin_bottom = 29.0
rect_min_size = Vector2( 175, 8 )
size_flags_horizontal = 8
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "COMMAND
"
text = "COMMAND
"
scroll_active = false

[node name="CurrentOperation" type="RichTextLabel" parent="VBoxContainer"]
margin_left = 25.0
margin_top = 30.0
margin_right = 200.0
margin_bottom = 38.0
rect_min_size = Vector2( 175, 8 )
rect_clip_content = false
size_flags_horizontal = 8
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[color=#949495]CO: [b]EXTRACTING"
text = "CO: EXTRACTING"
scroll_active = false

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
